--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,9 +15,9 @@ div.hint {
     max-width: 350px;
 }
 
-a, a:hover {
+a.service {
     font-size: 20px;
-    color: #5555ff;
+    color: #000000;
     text-decoration: none;
     background-color: #eeeeee;
     padding: 10px;
@@ -26,4 +26,38 @@ a, a:hover {
     margin-top: 20px;
     display: inline-block;
     border: solid 1px #cccccc;
+    width: calc(100vw - 82px);
+    max-width: 300px;
+}
+
+a:hover {
+    color: #333333 !important;
+    background-color: #ffffff !important;
+}
+
+div.static-password, div.current-static-password, div.generate-static-password, div.generate-static-password-confirm {
+    color: #999999;
+    font-size: 10px;
+}
+
+div.static-password, div.current-static-password, div.generate-static-password, div.generate-static-password-confirm {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+div.static-password {
+    cursor: pointer;
+}
+
+div.current-static-password {
+    font-weight: bold;
+}
+
+a.generate-static-password-link, a.generate-static-password-confirm-yes, a.generate-static-password-confirm-no {
+    text-decoration: none;
+    color: #000000;
+    display: inline-block;
+    border: solid 1px #cccccc;
+    background-color: #eeeeee;
+    padding: 4px 8px 4px 8px;
 }
