fix: Wait for async clipboard operation

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
 
 @main("LDAP Login") {
     <h1>Login</h1>
-    <div class="hint">Choose a service, enter your user name and paste (CTRL+V) your temporary password</div>
+    <div class="hint">Click a service, enter your user name and paste (CTRL+V) your temporary password</div>
     <br />
     @for(service <- services) {
         <div id="@service.getId()">
